--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     <h1>My review page</h1>
 
     <h2>This is subtitle</h2>
+    
+    <input type="text" id="input-box">
 
     <div class="divpractice">
         <div class="first">First div</div>
