--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <div class="search flex-col">
                 <div class="search-box flex-row">
-                    <input type="text">
+                    <input type="text" placeholder="Hello World">
                     <button><i class="bi bi-search"></i></button>
                 </div>
                 <div class="tags flex-row">
